--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "express": "^4.16.2",
     "node-spotify-api": "^1.0.7",
-    "spotify": "^0.3.0"
+    "spotify": "^0.3.0",
+    "spotify-web-api-node": "^2.5.0"
   },
   "devDependencies": {},
   "scripts": {
