--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "node-spotify-api": "^1.0.7",
+    "query-string": "^5.0.1",
+    "request": "^2.83.0",
     "spotify": "^0.3.0",
     "spotify-web-api-node": "^2.5.0"
   },
